feat: docs modify

--- a/项目技术栈详解.md
+++ b/项目技术栈详解.md
@@ -2,7 +2,14 @@
 
 ## 📋 项目概述
 
-**Hx.Abp.Attachment** 是一个基于现代 .NET 技术栈的智能档案管理系统，采用领域驱动设计(DDD)架构，集成人工智能技术，提供智能文档分类、全文搜索、OCR 识别等核心功能。
+**Hx.Abp.Attachment** 是一个基于现代 .NET 技术栈的智能档案管理系统，采用领域驱动设计(DDD)架构，集成人工智能技术，提供智能文档分类、全文搜索、OCR 识别、模板管理等核心功能。
+
+**最新更新** (2025):
+
+-   新增模板结构下载功能，支持将模板结构导出为 ZIP 压缩包
+-   新增模板验证服务，集中管理模板创建和更新的业务规则验证
+-   优化模板名称唯一性约束，从全局唯一改为按父节点分组唯一
+-   优化验证逻辑，统一验证服务，提升代码质量和可维护性
 
 ## 🏗️ 整体技术架构
 
@@ -332,6 +339,10 @@ public class AttachCatalogue : FullAuditedAggregateRoot<Guid>
 -   **AI Classification**: 智能分类
 -   **Search Engine**: 搜索引擎
 -   **Template Management**: 模板管理
+    -   模板版本管理：支持模板多版本管理，版本回滚
+    -   模板验证服务：集中管理模板创建和更新的业务规则验证
+    -   模板结构导出：支持将模板结构导出为 ZIP 压缩包
+    -   动态/静态分面管理：支持动态和静态分面模板的互斥管理
 
 #### 2.2 基础设施模块
 
@@ -378,6 +389,33 @@ CREATE TABLE "APPATTACHFILE" (
     "IS_CATEGORIZED" BOOLEAN DEFAULT true
 );
 ```
+
+#### 1.3 APPATTACH_CATALOGUE_TEMPLATES (档案目录模板表)
+
+```sql
+CREATE TABLE "APPATTACH_CATALOGUE_TEMPLATES" (
+    "ID" UUID NOT NULL,
+    "VERSION" INTEGER NOT NULL DEFAULT 1,
+    "TEMPLATE_NAME" VARCHAR(256) NOT NULL,
+    "PARENT_ID" UUID,
+    "PARENT_VERSION" INTEGER,
+    "TEMPLATE_PATH" VARCHAR(200),
+    "FACET_TYPE" INTEGER NOT NULL DEFAULT 0,
+    "TEMPLATE_PURPOSE" INTEGER NOT NULL DEFAULT 1,
+    "TEMPLATE_ROLE" INTEGER NOT NULL DEFAULT 3,
+    "IS_STATIC" BOOLEAN NOT NULL DEFAULT false,
+    "IS_LATEST" BOOLEAN NOT NULL DEFAULT true,
+    "META_FIELDS" JSONB DEFAULT '[]'::jsonb,
+    "PERMISSIONS" JSONB DEFAULT '[]'::jsonb,
+    "TAGS" JSONB DEFAULT '[]'::jsonb,
+    CONSTRAINT "PK_ATTACH_CATALOGUE_TEMPLATES" PRIMARY KEY ("ID", "VERSION")
+);
+```
+
+**索引设计**:
+
+-   根节点唯一性约束：`UK_ATTACH_CATALOGUE_TEMPLATES_NAME_LATEST_ROOT` (TemplateName + IsLatest, 仅当 ParentId IS NULL)
+-   子节点唯一性约束：`UK_ATTACH_CATALOGUE_TEMPLATES_NAME_PARENT_LATEST` (TemplateName + ParentId + IsLatest, 仅当 ParentId IS NOT NULL)
 
 ### 2. 索引设计
 
