--- a/src/Hx.Abp.Attachment.Dmain.Shared/Hx/Abp/Attachment/Domain/Shared/Localization/zh-Hans.json
+++ b/src/Hx.Abp.Attachment.Dmain.Shared/Hx/Abp/Attachment/Domain/Shared/Localization/zh-Hans.json
@@ -1,5 +1,5 @@
 {
-  "culture": "zh-CN",
+  "culture": "zh-Hans",
   "texts": {
     "Permission:Attachment": "附件管理",
     "Permission:Attachment.Catalogue": "分类管理",
